# wagtail-starter-blog

./: .babelrc  .editorconfig  .eslintrc.js  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dev.docker-compose.yml  docker-compose.yml  gulpfile.js  init-letsencrypt.sh  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tsconfig.json  webpack.config.js
blog/: blocks.py  models.py  wagtail_hooks.py
blog/migrations/: 0001_initial.py  0002_articletopic_alter_articlepage_topics_and_more.py  0003_articlepage_author_articlepage_published_date.py  0004_articlepage_content.py  0005_alter_articlepage_content.py  0006_alter_articlepage_content.py  0007_alter_articlepage_content.py  0008_alter_articlepage_content.py  0009_alter_articlepage_content_alter_topic_content_object.py  0010_alter_articlepage_options.py
branding/: gulpfile.js  package.json  pnpm-lock.yaml
branding/models/: data.json
branding/public/: CNAME  index.html
branding/templates/: index.html
common/: blocks.py  constants.py  mixins.py  models.py  utils.py  wagtail_hooks.py
common/migrations/: 0001_initial.py  0002_alter_contactusfooter_options.py  0003_alter_contactusfooter_photo.py  0004_contactusfooter_address.py  0005_navcta.py
common/templatetags/: string_utils.py
config/nginx/: nginx.conf
consultancy/: context.py  urls.py  wsgi.py
home/: blocks.py  models.py
service/: blocks.py  models.py
starter/: context.py  urls.py  wsgi.py
starter/cms/: apps.py  (+1 more)
team/: models.py
work/: blocks.py  models.py
(+162 files in other folders)
