[tool.poetry]
name = "starter"
version = "0.1.0"
description = "Starter Wagtail Project"
authors = ["Four Lanes"]

[tool.poetry.dependencies]
python = "~3.12"
bleach = "6.2.0"
django = ">=5.1.5,<5.2"
dj-database-url = ">=2.3.0,<2.4"
psycopg2 = ">=2.9.10,<2.10"
python-decouple = ">=3.8,<3.9"
tinycss2 = ">=1.4.0,<1.5"
wagtail = ">=6.3,<6.4"
wagtail-metadata = "5.0.0"
whitenoise = ">=6.4.0,<6.5"

[tool.poetry.group.dev.dependencies]
black = "22.8.0"
flake8 = "5.0.4"
isort = "5.13.2"
pre-commit = "3.6.0"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
skip = "migrations"
multi_line_output = 3
use_parentheses = true

[tool.black]
line-length = 119
extend-exclude = '''
/(
  | migrations
)/
'''
